--- a/.github/ISSUE_TEMPLATE/기능-추가-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-추가-템플릿.md
@@ -1,10 +1,20 @@
 ---
 name: 기능 추가 템플릿
-about: 구현한 기능을 추가할 때 사용
+about: 구현할 기능을 추가할 때 사용
 title: "[Feat] "
 labels: ''
 assignees: ''
 
 ---
 
-## 구현할 기능에 대한 설명
+## 어떤 기능인가요?
+
+>추가하려는 기능에 대해 간결하게 설명해주세요
+
+## 작업 상세 내용
+
+- [] TODO
+- [] TODO
+- [] TODO
+
+## 참고할만한 자료 (선택)
