--- a/.github/ISSUE_TEMPLATE/버그-문제-제보-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/버그-문제-제보-템플릿.md
@@ -1,12 +1,22 @@
 ---
 name: 버그/문제 제보 템플릿
-about: 고쳐야 할 버그/문제를 추가할 때 사용
+about: 고쳐야 할 버그/문제를 제보할 때 사용
 title: "[Fix]"
 labels: ''
 assignees: ''
 
 ---
 
-## 버그에 대한 설명
+## 어떤 버그인가요?
 
-## 스크린샷(Optional)
+> 어떤 버그인지 간결하게 설명해주세요
+
+## 어떤 상황에서 발생한 버그인가요?
+
+> 가능하면 Given-When-Then 형식으로 서술해주세요
+
+## 예상 결과
+
+> 예상했던 정상적인 결과가 어떤 것이었는지 설명해주세요
+
+## 참고할만한 자료 (선택)
